Freedom Sanbox Ant Deploy/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Note__c</fullName>
        <formula>&apos;This is a system generated invoice and does not require any signature&apos;</formula>
        <label>Note:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Number__c</fullName>
        <formula>&quot;AABCF3377P&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PAN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proforma__c</fullName>
        <displayFormat>FFP/10-11/P{000}</displayFormat>
        <label>Proforma Invoice No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Registration_Number__c</fullName>
        <formula>&quot;AABCF3377PST001&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax Registration Number</label>
        <type>Text</type>
    </fields>
</CustomObject>